# zerobus-sdk-py

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  NEXT_CHANGELOG.md  README.md  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md  issue.md
.github/workflows/: push.yml  test.yml
examples/: README.md  async_example.py  async_example_json.py  async_example_proto.py  async_example_proto_explicit.py  async_example_proto_implicit.py  record_pb2.py  sync_example.py  sync_example_json.py  sync_example_proto.py  sync_example_proto_explicit.py  sync_example_proto_implicit.py
tests/: conftest.py  mock_grpc.py  row_pb2.py  test_record_types.py  test_row.proto  test_sdk.py  test_sdk_basic.py
zerobus/sdk/: __init__.py
zerobus/sdk/aio/: __init__.py  zerobus_sdk.py
zerobus/sdk/shared/: __init__.py  definitions.py  zerobus_service_pb2.py  zerobus_service_pb2_grpc.py
zerobus/sdk/sync/: __init__.py  zerobus_sdk.py
zerobus/tools/: generate_proto.py
