[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zerobus-sdk"
version = "0.1.0"
description = "Zerobus SDK for Python"
requires-python = ">=3.7"
keywords = ["zerobus", "databricks", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.1,<3",
    "grpcio>=1.50.0",
    "protobuf>=4.21.0,<6.0",
]

[tool.setuptools.packages.find]
include = ["zerobus", "zerobus.*"]