[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "databricks-zerobus-ingest-sdk"
version = "0.1.0"
description = "Databricks Zerobus Ingest SDK for Python"
requires-python = ">=3.9"
keywords = ["zerobus", "databricks", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28.1,<3",
    "grpcio>=1.60.0,<2.0",
    "protobuf>=6.31.0,<7.0",
]

[project.optional-dependencies]
dev = [
    # Build tools
    "wheel",
    "build",
    "grpcio-tools>=1.60.0,<2.0",
    # Code formatting
    "black",
    "pycodestyle",
    "autoflake",
    "isort",
    # Testing
    "pytest",
    "pytest-cov",
    "pytest-xdist>=3.6.1,<4.0",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
include = ["zerobus", "zerobus.*"]

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
